# zephyr-lang

./: .gitignore  .rustfmt.toml  CODE_OF_CONDUCT.md  Cargo.toml  aura-lang.cabal  build.gradle.kts  fourmolu.yaml  package.json  package.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  settings.gradle.kts  stack.yaml  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build.yml  node.js.yml  rust.yml
.stack-work/: stack.sqlite3
.stack-work/ghci/741657e9/: cabal_macros.h
.stack-work/ghci/b599e7e5/: cabal_macros.h
.stack-work/install/x86_64-linux/c3470bec418b3bbf8fad03eaf0de82d533047ece8e7c4b54b007708288104581/9.6.1/pkgdb/: aura-lang-0.1.0-LlmAJl4PBbO9GdYDI6h4Rc.conf  package.cache
docs/: .gitignore  .prettierrc  index.md  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts  style.css  vars.css
docs/docs/: index.md
docs/docs/.vitepress/: config.ts
docs/docs/guide/: index.md
docs/guide/: getting-started.md  literals.md  what-is-zephyr.md
dokka/templates/includes/: header.ftl
examples/: arithmatic.zph  closures.zph  literals.aura  literals.zph
gradle/: libs.versions.toml
src/: error.rs  main.rs  utils.rs
src/compiler/: mod.rs
src/main/antlr/: ZephyrLexer.g4  ZephyrLexer.interp  ZephyrLexer.java  ZephyrLexer.tokens  ZephyrParser.g4  ZephyrParser.interp  ZephyrParser.java  ZephyrParser.tokens  ZephyrParserBaseListener.java  ZephyrParserListener.java
src/main/kotlin/com/theonlytails/zephyr_lang/: error.kt  utils.kt
src/main/kotlin/com/theonlytails/zephyr_lang/config/: config.kt
src/main/kotlin/com/theonlytails/zephyr_lang/parser/: Ast.kt  Parser.kt  env.kt  types.kt
src/parser/: ast.rs  error.rs  grammar.lalrpop  grammar.pest  grammar.rs  lexer.rs  mod.rs  string.rs  token.rs
src/parser/ast/: mod.rs  operators.rs  structs.rs  types.rs
src/test/kotlin/: GrammarTest.kt
(+9 files in other folders)
