[package]
name = "zephyr-lang"
version = "0.1.0"
edition = "2021"
authors = ["TheOnlyTails"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
itertools = "0.11.0"
lazy_static = "1.4.0"
ordered-float = "3.9.1"
pest = "2.7.3"
pest_derive = "2.7.3"
rand = "0.8.5"
regex = "1.9.5"
thiserror = "1.0.48"
unescape = "0.1.0"
