[package]
name = "zephyr-lang"
version = "0.1.0"
edition = "2021"
authors = ["TheOnlyTails"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
color-eyre = "0.6.3"
itertools = "0.12.1"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
lazy_static = "1.4.0"
logos = "0.14.0"
once_cell = "1.19.0"
ordered-float = "4.2.0"
rand = "0.8.5"
regex = "1.10.4"
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
unescape = "0.1.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
derive_builder = "0.20.0"

[build-dependencies]
lalrpop = "0.20.2"
